<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/t_tasks"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/s_t_tasks"
            />
        <TextView
            android:id="@+id/t_taskscount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/s_t_taskscount"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/t_number"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_tiny"
            android:text="@string/s_t_number"
            />
        <ImageView
            android:id="@+id/i_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/task1"
            android:layout_marginBottom="@dimen/dp_tiny"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
    <EditText
        android:id="@+id/e_answer"
        android:layout_width="@dimen/dp_huge"
        android:layout_height="wrap_content"
        android:inputType="text"
        />
    <Button
        android:id="@+id/b_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_b_answer"
        />
    </LinearLayout>
    <Button
        android:id="@+id/b_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/s_b_return"
        />
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </androidx.fragment.app.FragmentContainerView>
</LinearLayout>